2002-11-20  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/database.py (is_database): Check more carefully.
	* qm/test/text_result_stream.py (TextResultStream._DisplayResult):
	Show annotations for failing tests even in "brief" mode.
	* tests/QMTest/selfdb.py (RegressionDatabase.GetTestIds): Use
	is_database.
	* tests/QMTest/selftest.py (RegTest.Run): Use <pre> tags to tidy
	output.

2002-11-19  Mark Mitchell  <mark@codesourcery.com>

	* README: Update installation instructions.

2002-11-15  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py (cPickle): Import it.
	(fcntl): Likewise.
	(select): Likewise.
	(F_GETFD): New constant.
	(F_SETFD): Likewise.
	(FD_CLOEXEC): Likewise.
	(Executable.Spawn): Add exception_pipe parameter.  Return the PID
	of the child.
	(Executable.Run): Create the exception_pipe.
	* qm/platform_unix.py (RunProgramError): Remove.
	(ProgramStoppedError): Likewise.
	(ProgramTerminatedBySignalError): Likewise.
	(replace_program): Likewise.
	(run_program): Likewise.
	(run_program_captured): Likewise.
	* qm/test/classes/process_target.py
	(ProcessTarget.QMTestExecutable): New class.
	(ProcessTarget.Start): Use it.
	* tests/QMTest/selftest.py (RegTest.Run): Use Executable.
	
2002-11-15 Mark Mitchell <mark@codesourcery.com

	* qm/executable.py (string): Import it.
	(msvcrt): Likewise.
	(pywintypes): Likewise.
	(Executable.Run): Fix typo.
	(Executable._DoParent): Correct Windows logic.
	* qm/test/file_database.py: Use normpath throughout.

2002-11-14  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py: New file.
	* qm/test/classes/command.py (ExecTestBase.RunProgram): Use
	RedirectedExecutable to encapsulate execution.

	* qm/read_thread.py: New file.
	* qm/write_thread.py: Likewise.
	* qm/test/classes/command.py: Use them.

2002-11-12  Mark Mitchell  <mark@codesourcery.com>

	* NEWS: Mention uniform extension file format.
	* qm/extension.py (parse_dom_element): Extend backwards
	compatibility tricks.